# Build-system-2020

./: .gitignore  CMakeLists.txt  README.md
A/: preparing.py
B/: CMakeLists.txt  abs.cpp  lib.h
C/: main.cpp
